# Movie-Recommender

./: .gitignore  CMakeLists.txt  README.md  actorSearchTest  directorSearchTest  movieDatabase.csv
header/: CalculateTrendScore.h  Movie.h  MovieSearch.h  RatingSort.h  UserAccount.h  actorSearch.h  directorSearch.h  genre.hpp  genreSearch.h  loginDatabase.h  movieParse.h  movieRecSystem.h  printTrendingMovies.h  topTrendMovies.h  trendingMovies.h  yearSearch.h
src/: CalculateTrendScore.cpp  Movie.cpp  MovieSearch.cpp  RatingSort.cpp  UserAccount.cpp  actorSearch.cpp  directorSearch.cpp  genreSearch.cpp  loginDatabase.cpp  main.cpp  movieParse.cpp  movieRecSystem.cpp  printTrendingMovies.cpp  topTrendMovies.cpp  trendingMovies.cpp  yearSearch.cpp
test/: MovieTest.cpp  RatingAndTrendingTests.cpp  actorSearchTest.cpp  directorSearchTest.cpp  generalTest.cpp
